--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "hiddie.js",
   "scripts": {
     "test": "standard && tap test.js",
-    "coverage": "tap --cov --coverage-report=html test.js"
+    "coverage": "tap --cov --coverage-report=html test.js",
+    "build": "webpack"
   },
   "license": "MIT",
   "repository": {
@@ -13,10 +14,14 @@
     "url": "https://github.com/hepsiburada/hiddie"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.1",
+    "babel-loader": "^8.2.5",
     "pre-commit": "^1.2.2",
     "serve-static": "^1.12.4",
     "standard": "^14.0.2",
-    "tap": "^12.6.5"
+    "tap": "^12.6.5",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
     "path-to-regexp": "^4.0.0",
